<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingHorizontal="24dp"
    android:paddingVertical="14dp"
    tools:context=".RecuperarSenhaActivity"
    >

    <ImageButton
        android:id="@+id/voltar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        style="?attr/materialButtonOutlinedStyle"
        android:contentDescription="@string/sair"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recupera_o_de_senha"
        android:textColor="@color/text"
        android:textSize="34sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_o_e_mail_cadastrado"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="left"
        android:layout_marginBottom="1dp"
        android:text="@string/e_mail"
        android:textColor="@color/text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:hint="@string/digite_seu_e_mail"
        app:boxStrokeColor="@color/blue_text"
        android:textColorHint="@color/gray_200">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            app:boxStrokeColor="@color/blue_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRecoveryPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_text"
        android:layout_marginTop="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>
