<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingHorizontal="24dp"
    android:paddingVertical="14dp"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/btnVoltar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        style="?attr/materialButtonOutlinedStyle"
        android:contentDescription="@string/sair"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/adicionar_cart_o"
        android:textColor="@color/text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:gravity="left"
        android:layout_marginBottom="1dp"
        android:textStyle="normal"
        android:text="@string/n_mero_do_cart_o"
        android:textColor="@color/text"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlNumeroDoCartão"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:endIconMode="clear_text"
        android:hint="@string/cart_o_de_cr_dito"
        app:boxStrokeColor="@color/blue_text"
        android:textColorHint="@color/gray_200"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvNumerodoCartão"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:gravity="left"
            android:textStyle="normal"
            android:layout_marginStart="4dp"
            android:text="Data de validade"
            android:textColor="@color/text"
            />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:gravity="left"
            android:layout_marginStart="85dp"
            android:textStyle="normal"
            android:text="@string/c_digo_de_seguran_a"
            android:textColor="@color/text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlDataDeValidade"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:hint="@string/mm_aa"
            app:boxStrokeColor="@color/blue_text"
            android:textColorHint="@color/gray_200"
            android:layout_gravity="left">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDataDeValidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlCvv"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:hint="@string/cardCVV"
            app:boxStrokeColor="@color/text"
            android:textColorHint="@color/gray_200"
            android:layout_gravity="left">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvCvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnAdicionarCartao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:text="@string/adicionar"
        android:backgroundTint="@color/blue_text"
        />


    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:textSize="11sp"
        android:gravity="center"
        android:textStyle="normal"
        android:text="@string/as_informa_es_do_seu_cart_o_ser_o_armazenadas_com_seguran_a"
        android:textColor="@color/text"
        />

</androidx.appcompat.widget.LinearLayoutCompat>